[package]
name = "tauri-plugin-bluetooth-manager"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-bluetooth-manager"

[dependencies]
tauri = { version = "2.5.0" }
zbus = "3"
zbus_macros = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
