[package]
name = "tauri-plugin-bluetooth-manager"
version = "0.1.0"
authors = [ "Joaquin (Pato) Decima <jdecima@vasak.net.ar>", "Vasak Group" ]
description = "A Tauri plugin to manage Bluetooth adapters and devices in Linux."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-bluetooth-manager"
license = "GPL-3.0-or-later"

[dependencies]
tauri = { version = "2" }
zbus = "3"
zbus_macros = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
byteorder = "1.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
